--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Our secret keys
 src/base.js
+
+# Our compiled security rules
+security-rules.json
