Use our Bolt configuration on deploy

--- a/firebase.json
+++ b/firebase.json
@@ -15,5 +15,8 @@
     "headers": [
       {"source": "/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}]}
     ]
+  },
+  "database": {
+    "rules": "security-rules.bolt"
   }
 }
