--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "aphrodite": "^2.2.2",
+    "emoji-mart": "^2.6.1",
     "firebase-bolt": "^0.8.3",
     "immutability-helper": "^2.7.0",
     "moment": "^2.22.2",
